# ros_launch_experiment_ws

./: README.md  config.yaml  start_chat.bash
src/ascent_car/: CMakeLists.txt  package.xml
src/ascent_car/config/: config.yaml
src/ascent_car/launch/: top_level_launcher.launch
src/camera/: CMakeLists.txt  package.xml  setup.py
src/camera/launch/: chat_cam.launch
src/camera/scripts/: chat_cam
src/camera/src/camera/: node_code.py
src/camera_manager/: CMakeLists.txt  package.xml  setup.py
src/camera_manager/launch/: camera_manager.launch
src/camera_manager/scripts/: launch_cams
src/talkative_node/: CMakeLists.txt  package.xml  setup.py
src/talkative_node/launch/: chat.launch
src/talkative_node/scripts/: chat_script
src/talkative_node/src/talkative_node/: node_code.py
