<?xml version="1.0"?>
<package format="2">
  <name>camera_manager</name>
  <version>0.0.0</version>
  <description>The camera_manager package</description>

  <maintainer email="tkostas@todo.todo">tkostas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
